# smart-copy-tool

./: .gitignore  LICENSE  README.md
app/: README.md  index.html  package-lock.json  package.json
app/src/: App.tsx  api.ts  format.ts  styles.css  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: copy.rs  lib.rs  main.rs  model.rs  verify.rs
app/src/components/: EditTaskModal.tsx  LogPanel.tsx  OptionsPanel.tsx  PresetBar.tsx  TaskTable.tsx
docs/: 01-背景与需求.md  02-演进历程.md  03-架构设计.md  04-功能清单.md  05-开发构建指南.md
legacy-powershell/: Build-Exe.ps1  Launcher.cs  README.md  SmartCopyTool.config.json  SmartCopyTool.ps1  Start-SmartCopyTool.cmd
