[package]
name = "smart-copy"
version = "1.0.0"
description = "Smart Copy Tool - 基于 robocopy 的稳定文件迁移工具"
authors = ["zhengzhangbiao-jk"]
edition = "2021"

[lib]
# The `_lib` suffix avoids a name clash with the bin target on Windows.
name = "smart_copy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
sha2 = "0.10"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
